--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html>
   <h1 style="text-align:center;font-family:Snell Roundhand, cursive">My name is Shin Lee, welcome to my site!</h1>
 
-<center><img src="redcoattraintrack.JPG" width="3024" height="4032" />
+<center><img src="redcoattraintrack.JPG" width="756" height="1008" />
   
 <b><h1 style="text-align:center;font-family:Marker Felt, fantasy;font-style:bold;> align="center"> ABOUT ME </h1>
-<p style ="text-align:center;font-family:heiti sc;font-size:16px;font-style:italic"> 
-  I am a freshman at the University of Texas at Austin majoring in Management Information Systems with a minor in Marketing. I grew up in Rockwall, TX (just East of Dallas) with my parents, my older siblings (Shelby & Blake), and all sorts of animals. I love my family, friends, creating fun videos of my everyday adventures, and all-day movie marathons! </p>
+<p style ="text-align:center;font-family:Didot, serif;font-size:16px"> 
+  I am a freshman at the University of Texas at Austin, majoring in MIS, minoring in Media and Entertainment Industries, and working towards the CS Elements certificate. I was born in Suwon, South Korea, but I have lived in Plano, TX for most of my life. Currently, I play a lot of League of Legends in my free time, and I am addicted to an anime called Fruits Basket! </p>
   
-<center><img src="fam.JPG" width="400" height="266"><img src="besties.JPG" width="400" height"266"><img src="bribri.JPG" width="400" height="266" />
+<h1 style="text-align: center;font-family:Marker Felt, fantasy;">My favorite website</h1>
   
-<p style ="text-align:center;font-family:heiti sc;font-size:16px;font-style:italic"> 
-  I can usually be found at a coffeeshop, somewhere outside on campus, or, from time-to-time, running around in Disney World. My favorite foods include Pirate's Booty (it's good, trust me) and pasta, and I could probably survive on cold brew coffee. The way to my heart is a classic chocolate milkshake or a random trip to Target!  </p>
-  
-<h1 style="text-align: center;font-family:signpainter;">My Favorite Website</h1>
-  
-<p style="text-align: center;font-family:heiti sc;"><a href="https://www.youtube.com/channel/UChNEqWM0HWbhb-e44nMLm1Q">Click Here</a> to go to my YouTube channel!</p>
-
-<h1 style="text-align: center;font-family:signpainter;">Thanks for visiting!</h1>
+<p style="text-align: center;font-family:Didot, serif;"><a href="https://www.crunchyroll.com/fruits-basket">Click Here</a> to go to my favorite site!</p>
   
 <body bgcolor="FF9999">
 
