--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 <p style="text-align: center;font-family:Didot, serif;"><a href="https://www.crunchyroll.com/fruits-basket">Click Here</a> to go to my favorite site!</p>
   
-<body bgcolor="FF9999">
+<body bgcolor="F0FFFF">
 
 </body>
 
