--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 <h1 style="text-align: center;font-family:Marker Felt, fantasy;">My favorite website</h1>
   
-<p style="text-align: center;font-family:Didot, serif;"><a href="https://www.crunchyroll.com/fruits-basket">Click Here</a> to go to my favorite site!</p>
+  </b> <p style="text-align: center;font-family:Didot, serif;"><a href="https://www.crunchyroll.com/fruits-basket">Click Here</a> to go to my favorite site!</p>
   
 <body bgcolor="E0FFFF">
 
