--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <p style ="text-align:center;font-family:Didot, serif;font-size:16px"> 
   I am a freshman at the University of Texas at Austin, majoring in MIS, minoring in Media and Entertainment Industries, and working towards the CS Elements certificate. I was born in Suwon, South Korea, but I have lived in Plano, TX, for most of my life. Currently, I play a lot of League of Legends in my free time, and I am addicted to an anime called Fruits Basket! </p>
   
-<h1 style="text-align: center;font-family:Marker Felt, fantasy;">My favorite website</h1>
+  </b><h1 style="text-align: center;font-family:Marker Felt, fantasy;">My favorite website</h1>
   
-  </b> <p style="text-align: center;font-family:Didot, serif;"><a href="https://www.crunchyroll.com/fruits-basket">Click Here</a> to go to my favorite site!</p>
+<p style="text-align: center;font-family:Didot, serif;"><a href="https://www.crunchyroll.com/fruits-basket">Click Here</a> to go to my favorite site!</p>
   
 <body bgcolor="E0FFFF">
 
